<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KeyboardActivity">


        <TextView
            android:id="@+id/device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/device" />

        <Button
            android:id="@+id/btnNoDevicesAuthorized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_authorized_devices"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/deviceSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/keyboard_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/keyboard_layout" />

        <Spinner
            android:id="@+id/layoutSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/layout_list" />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_entry" />

        <TextView
            android:id="@+id/txtState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>