<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtPluginState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnEnablePlugin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_plugin" />

    <Button
        android:id="@+id/btnSelectAuthorizedDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSelectAuthorizedDevices"
        android:text="@string/select_authorized_devices" />

    <Button
        android:id="@+id/btnSendTestString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_test_string" />
</LinearLayout>